# git-cli-viewer

./: Cargo.toml  README.md  run.sh  tempgit.sh
src/: main.rs
