[package]
name = "git-cli-viewer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.13.25"
clap = { version = "3.0", features = [ "derive" ] }
anyhow = "1.0.52"
tempfile = "3.3.0"
dialoguer = "0.9.0"